--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "babel src -d dist --source-maps inline",
-    "local": "DEBUG=true nodemon src/index.js --exec babel-node",
+    "local": "DEBUG=true nodemon src/index.js --ignore 'files/*' --exec babel-node",
     "lint": "eslint src",
     "pretty": "prettier --write \"./src/**/*.{js,ts,jsx,json}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,10 +24,11 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "ipfs-api": "^26.1.2",
-    "moment": "^2.25.3",
+    "moment": "^2.27.0",
     "robonomics-js": "^0.6.3",
     "rosbag": "^2.3.2",
     "rosbag-write": "^1.0.0",
